--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_notification.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/_notification.sass
@@ -3,14 +3,21 @@
   max-width: 450px
   bottom: 20px
   right: -9999px
-
+#write_review_modal
+  .alert
+    position: relative
+    right: 0
+    max-width: 100%
+    margin: 0 rem(20)
 .alert
   padding-right: 40px
   margin-bottom: 0
   z-index: z('alert')
+  border-radius: 0
   .close
     position: absolute
     width: 20px
     height: 20px
     right: 10px
     top: 16px
+
