--- a/catalog/view/theme/d_visualize/template/partial/d_account_field_affiliate.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_account_field_affiliate.twig
@@ -1,1 +1,1 @@
-{% include components.d_account_field_affiliate.template with components.d_account_field_affiliate %}
+{% include component.d_account_field_affiliate.template with component.d_account_field_affiliate %}
