--- a/catalog/view/theme/d_visualize/template/partial/d_address_field.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_address_field.twig
@@ -1,1 +1,1 @@
-{% include components.d_address_field.template with components.d_address_field %}
+{% include component.d_address_field.template with component.d_address_field|merge({form:form}) %}
