--- a/catalog/view/theme/d_visualize/template/partial/d_breadcrumb.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_breadcrumb.twig
@@ -1,1 +1,1 @@
-{% include components.breadcrumb.template with components.breadcrumb %}
+{% include component.breadcrumb.template with component.breadcrumb %}
