--- a/catalog/view/theme/d_visualize/template/partial/d_button.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_button.twig
@@ -1,1 +1,1 @@
-{% include components.d_button.template with components.d_button %}
+{% include component.d_button.template with component.d_button %}
