--- a/catalog/view/theme/d_visualize/template/partial/d_custom_field.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_custom_field.twig
@@ -1,1 +1,1 @@
-{% include components.d_custom_field.template with components.d_custom_field %}
+{% include component.d_custom_field.template with component.d_custom_field|merge({form:form}) %}
