--- a/catalog/view/theme/d_visualize/template/partial/d_notification.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_notification.twig
@@ -1,1 +1,1 @@
-{% include components.d_notification.template with components.d_notification %}
+{% include component.d_notification.template with component.d_notification %}
