--- a/catalog/view/theme/d_visualize/template/partial/d_product_list.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_product_list.twig
@@ -1,1 +1,1 @@
-{% include components.d_product_list.template with components.d_product_list %}
+{% include component.d_product_list.template with component.d_product_list %}
