--- a/catalog/view/theme/d_visualize/template/partial/d_search.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_search.twig
@@ -1,1 +1,1 @@
-{% include components.d_search.template with components.d_search %}
+{% include component.d_search.template with component.d_search %}
