--- a/catalog/view/theme/d_visualize/template/layout/default.twig
+++ b/catalog/view/theme/d_visualize/template/layout/default.twig
@@ -5,7 +5,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        {% include components.notification.template %}
+                        {% include component.notification.template %}
                     </div>
                 </div>
             </div>
