--- a/catalog/view/theme/d_visualize/template/partial/d_account_field.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_account_field.twig
@@ -1,1 +1,1 @@
-{% include components.d_account_field.template with components.d_account_field %}
+{% include component.d_account_field.template with component.d_account_field|merge({form:form})  %}
