--- a/catalog/view/theme/d_visualize/template/partial/d_product_sort.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_product_sort.twig
@@ -1,1 +1,1 @@
-{% include components.d_product_sort.template with components.d_product_sort %}
+{% include component.d_product_sort.template with component.d_product_sort %}
