--- a/catalog/view/theme/d_visualize/template/partial/d_review.twig
+++ b/catalog/view/theme/d_visualize/template/partial/d_review.twig
@@ -1,1 +1,1 @@
-{% include components.d_review.template with components.d_review %}
+{% include component.d_review.template with component.d_review %}
