--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/extension/_ajax_filter.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/extension/_ajax_filter.sass
@@ -51,7 +51,7 @@
           font-family: inherit
           font-weight: $fontMedium
         > span
-          font-family: 'Font Awesome 5 Pro'
+          font-family: 'Font Awesome\ 5 Free'
           font-weight: 400
           top: 43px
           right: 4px
@@ -63,7 +63,7 @@
           +prefixes('transform', 'rotate(90deg)')
           +transition
           &:before
-            content: "\F105"
+            content: "\f005"
         &.collapsed > span
           +prefixes('transform', 'rotate(0)')
       .af-elements > .af-wrapper
