--- a/catalog/view/theme/d_visualize/template/product/category.twig
+++ b/catalog/view/theme/d_visualize/template/product/category.twig
@@ -1,5 +1,5 @@
 {#it's mean in layout template#}
 {% extends template %}
 {% block content %}
-    {% include components.category_section.template %}
+    {% include component.category_section.template %}
 {% endblock %}
