--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/form/_forms.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/component/default/form/_forms.scss
@@ -1,4 +1,4 @@
-.form-control {
+.form-control ,.field{
   border: $borderMain;
   border-radius: 0;
   padding:rem(22) rem(20);
@@ -16,7 +16,7 @@
 }
 .form-group{
   &.error{
-    .form-control{
+    .form-control,.field{
       border: $borderMain;
       border-color: $borderColorError;
       background: $FormBackError;
@@ -28,4 +28,8 @@
 }
 select.form-control{
   padding: 0 rem(20);
+}
+
+.form-horizontal .form-group{
+  margin:0;
 }
