--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/page/product/_product.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/page/product/_product.sass
@@ -10,6 +10,10 @@
         margin-right: 3px
         &:last-of-type
           margin-right: 0
+  .review-link
+    font-size: 13px
+    margin-bottom: 10px
+    margin-left: rem(150)
 
   .product-price
     &-block
