--- a/catalog/view/theme/d_visualize/template/product/product.twig
+++ b/catalog/view/theme/d_visualize/template/product/product.twig
@@ -1,5 +1,5 @@
 {% extends template %}
 {% block content %}
-    {% include components.product_section.template %}
+    {% include component.product_section.template %}
 {% endblock %}
 
